# stenzel_os

./: .gitignore  STENZEL_OS_CLAUDE_GUIDE.md
stenzel-os-x86-ultra/kernel/: Cargo.toml
stenzel-os-x86-ultra/kernel/src/: console.rs  main.rs  serial.rs  signal.rs  sync.rs  time.rs  unicode.rs  util.rs
stenzel-os-x86-ultra/kernel/src/arch/: mod.rs
stenzel-os-x86-ultra/kernel/src/boot/: mod.rs
stenzel-os-x86-ultra/kernel/src/cgroups/: mod.rs
stenzel-os-x86-ultra/kernel/src/cloud/: datasource.rs  metadata.rs  mod.rs  network.rs  userdata.rs
stenzel-os-x86-ultra/kernel/src/compat/: appimage.rs  containers.rs  coreutils.rs  flatpak.rs  linux_syscall.rs  mod.rs  posix.rs
stenzel-os-x86-ultra/kernel/src/crypto/: aes.rs  chacha20.rs  ed25519.rs  luks.rs  mod.rs  random.rs  rsa.rs  sha256.rs  x25519.rs
stenzel-os-x86-ultra/kernel/src/drivers/: acpi.rs  acpi_dock.rs  amd_apu.rs  amd_gpu.rs  amd_powerplay.rs  amd_psp.rs  amd_smu.rs  amd_storemi.rs  backlight.rs  battery.rs  boot_logo.rs  devicetree.rs  display_pipe.rs  displayport.rs  drm.rs  drm_fb.rs  edp.rs  fch.rs  fingerprint.rs  firmware.rs  fnkeys.rs  font.rs  framebuffer.rs  fwupd.rs  gamepad.rs  gem.rs  gpio.rs  guc_huc.rs  hdmi.rs  hdr.rs  hidpi.rs  hotplug.rs  hpet.rs  input.rs  intel_gpu.rs  intel_me.rs  intel_power_wells.rs  intel_rst.rs  keyboard.rs  keyboard_layout.rs  (+30 more)
stenzel-os-x86-ultra/kernel/src/fs/: acl.rs  dentry.rs  devfs.rs  exfat.rs  ext2.rs  ext4.rs  fat32.rs  inode_cache.rs  iso9660.rs  mod.rs  ntfs.rs  (+8 more)
stenzel-os-x86-ultra/os/: Cargo.toml  build.rs
stenzel-os-x86-ultra/os/src/: main.rs
(+451 files in other folders)
