[package]
name = "stenzel_kernel"
version = "0.1.0"
edition = "2021"

[dependencies]
bootloader_api = "0.11"
x86_64 = { version = "0.15", features = ["instructions"] }
spin = { version = "0.9", default-features = false, features = ["spin_mutex", "rwlock", "once"] }
bitflags = "2"
linked_list_allocator = "0.10"
